使用 Colaboratory 建立

--- a/句子判斷(驗證資料).ipynb
+++ b/句子判斷(驗證資料).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNnnzkJZayDjKXeyvOLXK/n",
+      "authorship_tag": "ABX9TyP5MDZzSq7GiVwK7q9BPPoN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/2653319/-/blob/main/%E5%8F%A5%E5%AD%90%E5%88%A4%E6%96%B7(%E9%A9%97%E8%AD%89%E8%B3%87%E6%96%99).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/2653319/Chinese-sentence-time-judge/blob/main/%E5%8F%A5%E5%AD%90%E5%88%A4%E6%96%B7(%E9%A9%97%E8%AD%89%E8%B3%87%E6%96%99).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,14 +36,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wzByf9f3HU5_",
-        "outputId": "2b0e6c2c-70e6-4024-a7bf-7ef62146b6f6"
+        "outputId": "9f746674-214c-4c5a-b42d-396c7569d40d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -270,7 +270,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "61G-51l5HcUn",
-        "outputId": "21fde11d-9d9e-4b8f-dee1-25782fbc900b"
+        "outputId": "04c61727-9e27-4450-9e31-9e815a764e8f"
       },
       "execution_count": null,
       "outputs": [
@@ -281,23 +281,23 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyhanlp\n",
             "  Downloading pyhanlp-0.1.84.tar.gz (136 kB)\n",
-            "\u001b[K     |████████████████████████████████| 136 kB 31.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 136 kB 10.1 MB/s \n",
             "\u001b[?25hCollecting jpype1==0.7.0\n",
             "  Downloading JPype1-0.7.0-cp37-cp37m-manylinux2010_x86_64.whl (2.8 MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.8 MB 57.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.8 MB 59.9 MB/s \n",
             "\u001b[?25hCollecting hanlp-downloader\n",
             "  Downloading hanlp_downloader-0.0.25.tar.gz (13 kB)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from hanlp-downloader->pyhanlp) (2.23.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->hanlp-downloader->pyhanlp) (2022.6.15)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->hanlp-downloader->pyhanlp) (1.24.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->hanlp-downloader->pyhanlp) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->hanlp-downloader->pyhanlp) (3.0.4)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->hanlp-downloader->pyhanlp) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->hanlp-downloader->pyhanlp) (2022.6.15)\n",
             "Building wheels for collected packages: pyhanlp, hanlp-downloader\n",
             "  Building wheel for pyhanlp (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyhanlp: filename=pyhanlp-0.1.84-py3-none-any.whl size=29818 sha256=767e472e6c50ed2ebdb8db63c98ed32e3a591b47329f0e5224b6b013ba4722d6\n",
+            "  Created wheel for pyhanlp: filename=pyhanlp-0.1.84-py3-none-any.whl size=29818 sha256=8e8a175c0ee207c3e5a9c3683b409ffa0ed64276954d560aa5a8b78f27e74275\n",
             "  Stored in directory: /root/.cache/pip/wheels/8e/67/74/f1dfe4d6ea994941a47aee14de63ca71aba2ab96e2e217c072\n",
             "  Building wheel for hanlp-downloader (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for hanlp-downloader: filename=hanlp_downloader-0.0.25-py3-none-any.whl size=13776 sha256=59088e57f941c90863509bdac48cb5177b50c18e6d11084288059b039a782023\n",
+            "  Created wheel for hanlp-downloader: filename=hanlp_downloader-0.0.25-py3-none-any.whl size=13776 sha256=3b53d2f1b78239f9ba95fcb0886addedfe4c9620a267bbf605ce1ac72f517f0f\n",
             "  Stored in directory: /root/.cache/pip/wheels/cb/a2/c3/61f7b80f5d56e5b19dd9cb50303f8f3b621662f035a281d197\n",
             "Successfully built pyhanlp hanlp-downloader\n",
             "Installing collected packages: jpype1, hanlp-downloader, pyhanlp\n",
@@ -316,7 +316,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb3f588f-5ba3-411e-8fe2-d440d4fcd963"
+        "outputId": "c0749f9d-0f61-45d9-b195-c21a1718a0bd"
       },
       "execution_count": null,
       "outputs": [
@@ -325,9 +325,9 @@
           "name": "stdout",
           "text": [
             "下载 https://file.hankcs.com/hanlp/hanlp-1.8.3-release.zip 到 /usr/local/lib/python3.7/dist-packages/pyhanlp/static/hanlp-1.8.3-release.zip\n",
-            "100%   1.8 MiB 339.9 KiB/s ETA:  0 s [=========================================]\n",
+            "100%   1.8 MiB   1.5 MiB/s ETA:  0 s [=========================================]\n",
             "下载 https://file.hankcs.com/hanlp/data-for-1.7.5.zip 到 /usr/local/lib/python3.7/dist-packages/pyhanlp/static/data-for-1.8.3.zip\n",
-            "100% 637.7 MiB  13.7 MiB/s ETA:  0 s [=========================================]\n"
+            "100% 637.7 MiB  19.1 MiB/s ETA:  0 s [=========================================]\n"
           ]
         },
         {
@@ -443,6 +443,37 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# path = 'drive/MyDrive/output.txt'\n",
+        "# f = open(path, 'w')\n",
+        "# f.write('Hello World')\n",
+        "# f.write(123)\n",
+        "# f.write(123.45)\n",
+        "# f.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ozDonRMzmZEj",
+        "outputId": "c0485c1a-1ebf-4f4a-8ddb-07406900a2c4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1094,13 +1125,16 @@
         "\n",
         "  month = 999\n",
         "  day = 999\n",
+        "\n",
+        "  count = 0\n",
+        "\n",
         "  for i in range(0,len(line)-2):\n",
         "    j = i+1\n",
         "    k = j+1\n",
+        "\n",
         "    line_1 = line[i] + line[j] + line[k]\n",
         "    line_2 = line[i] + line[j] \n",
         "    line_3 = line[i-1] + line[j-1] \n",
-        "\n",
         "\n",
         "\n",
         "    if line_1 in month_:\n",
@@ -1135,13 +1169,26 @@
         "  small = [4,6,9,11]\n",
         "  big = [1,3,5,7,8,10,12]\n",
         "\n",
-        "  for i in range(0,len(line)-2):\n",
+        "  count = 0\n",
+        "\n",
+        "  for i in range(0,len(line)):\n",
         "    j = i+1\n",
         "    k = j+1\n",
-        "    line_1 = line[i] + line[j] + line[k]\n",
-        "    line_2 = line[i] + line[j] \n",
-        "    line_3 = line[j-1] + line[k-1] \n",
-        "    \n",
+        "\n",
+        "    try:\n",
+        "      line_1 = line[i] + line[j] + line[k]\n",
+        "      line_2 = line[i] + line[j] \n",
+        "      line_3 = line[j-1] + line[k-1] \n",
+        "    except:\n",
+        "      line.append(\" \")  \n",
+        "      count +=1\n",
+        "\n",
+        "      line_1 = line[i] + line[j] + line[k]\n",
+        "      line_2 = line[i] + line[j] \n",
+        "      line_3 = line[j-1] + line[k-1]\n",
+        "\n",
+        "    if count == 3:\n",
+        "      break\n",
         "\n",
         "\n",
         "    if line_1 in day_:\n",
@@ -1222,13 +1269,16 @@
         "\n",
         "  month = 999\n",
         "  day = 999\n",
+        "\n",
+        "  count = 0\n",
+        "\n",
         "  for i in range(0,len(line)-2):\n",
         "    j = i+1\n",
         "    k = j+1\n",
+        "\n",
         "    line_1 = line[i] + line[j] + line[k]\n",
         "    line_2 = line[i] + line[j] \n",
         "    line_3 = line[i-1] + line[j-1] \n",
-        "\n",
         "\n",
         "\n",
         "    if line_1 in month_num:\n",
@@ -1263,14 +1313,25 @@
         "  small = [4,6,9,11]\n",
         "  big = [1,3,5,7,8,10,12]\n",
         "\n",
-        "  for i in range(0,len(line)-2):\n",
+        "  count = 0\n",
+        "\n",
+        "  for i in range(0,len(line)):\n",
         "    j = i+1\n",
         "    k = j+1\n",
-        "    line_1 = line[i] + line[j] + line[k]\n",
-        "    line_2 = line[i] + line[j] \n",
-        "    line_3 = line[j] + line[k] \n",
-        "    \n",
         "\n",
+        "    try:\n",
+        "      line_1 = line[i] + line[j] + line[k]\n",
+        "      line_2 = line[i] + line[j] \n",
+        "      line_3 = line[j] + line[k] \n",
+        "    except:\n",
+        "      line.append(\" \")\n",
+        "      count += 1\n",
+        "      line_1 = line[i] + line[j] + line[k]\n",
+        "      line_2 = line[i] + line[j] \n",
+        "      line_3 = line[j] + line[k] \n",
+        "      \n",
+        "    if count == 3:\n",
+        "      break\n",
         "\n",
         "    if line_1 in day_num:\n",
         "      try:\n",
@@ -1355,27 +1416,49 @@
         "  day_tok = 999\n",
         "  small = [4,6,9,11]\n",
         "\n",
-        "  out = False\n",
+        "  count = 0\n",
         "\n",
-        "  for i in range(0,len(line)-6):\n",
-        "    line_1 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] + line[i+5] + line[i+6]\n",
-        "    #print(\"line_1:\",line_1)\n",
-        "    line_2 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] + line[i+5]\n",
-        "    #print(\"line_2:\",line_2)\n",
-        "    line_3 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] \n",
-        "    #print(\"line_3:\",line_3)\n",
-        "    line_4 = line[i] + line[i+1] + line[i+2] + line[i+3] \n",
-        "    #print(\"line_4:\",line_4)\n",
+        "  out = False\n",
+        "  if len(line) < 7:\n",
+        "    for t in range(0,4):\n",
+        "      line.append(\" \")\n",
+        "\n",
+        "  for i in range(0,len(line)):\n",
+        "    try: \n",
+        "      line_1 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] + line[i+5] + line[i+6]\n",
+        "      #print(\"line_1:\",line_1)\n",
+        "      line_2 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] + line[i+5]\n",
+        "      #print(\"line_2:\",line_2)\n",
+        "      line_3 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] \n",
+        "      #print(\"line_3:\",line_3)\n",
+        "      line_4 = line[i] + line[i+1] + line[i+2] + line[i+3] \n",
+        "      #print(\"line_4:\",line_4)\n",
+        "    except:\n",
+        "      line.append(\" \")\n",
+        "      count+=1\n",
+        "\n",
+        "      line_1 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] + line[i+5] + line[i+6]\n",
+        "      #print(\"line_1:\",line_1)\n",
+        "      line_2 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] + line[i+5]\n",
+        "      #print(\"line_2:\",line_2)\n",
+        "      line_3 = line[i] + line[i+1] + line[i+2] + line[i+3] + line[i+4] \n",
+        "      #print(\"line_3:\",line_3)\n",
+        "      line_4 = line[i] + line[i+1] + line[i+2] + line[i+3] \n",
+        "      #print(\"line_4:\",line_4)\n",
+        "\n",
+        "    if count == 4:\n",
+        "      break\n",
         "\n",
         "    for j in range(0,len(month_token)):\n",
         "      for k in range(0,len(day_token)):\n",
         "        if line_1 == month_token[j]+day_token[k]:\n",
-        "          if j == 1 :\n",
-        "            if k == 28 or k == 29 or k == 30 :\n",
+        "          print(\"line_1:\" , line_1)\n",
+        "          if j == 1 : #二月\n",
+        "            if k > 28: # 如果大於2月29\n",
         "              out = True\n",
         "              break\n",
         "          if j+1 in small:\n",
-        "            if k == 29 or k == 30:\n",
+        "            if k > 29: # 如果 雙數月 日期大於31  \n",
         "              out = True\n",
         "              break\n",
         "          month_tok = j\n",
@@ -1383,12 +1466,13 @@
         "          out = True\n",
         "          break\n",
         "        elif line_2 == month_token[j]+day_token[k]:\n",
-        "          if j == 1 :\n",
-        "            if k == 28 or k == 29 or k == 30 :\n",
+        "          print(\"line_2:\" , line_2)\n",
+        "          if j == 1 : \n",
+        "            if k > 28: \n",
         "              out = True\n",
         "              break\n",
         "          if j+1 in small:\n",
-        "            if k == 29 or k == 30:\n",
+        "            if k > 29: \n",
         "              out = True\n",
         "              break\n",
         "          month_tok = j\n",
@@ -1396,12 +1480,13 @@
         "          out = True\n",
         "          break\n",
         "        elif line_3 == month_token[j]+day_token[k]:\n",
-        "          if j == 1 :\n",
-        "            if k == 28 or k == 29 or k == 30 :\n",
-        "              ut = True\n",
+        "          print(\"line_3:\" , line_3)\n",
+        "          if j == 1 : \n",
+        "            if k > 28: \n",
+        "              out = True\n",
         "              break\n",
         "          if j+1 in small:\n",
-        "            if k == 29 or k == 30:\n",
+        "            if k > 29:  \n",
         "              out = True\n",
         "              break\n",
         "          month_tok = j\n",
@@ -1409,12 +1494,12 @@
         "          out = True\n",
         "          break\n",
         "        elif line_4 == month_token[j]+day_token[k]:\n",
-        "          if j == 1 :\n",
-        "            if k == 28 or k == 29 or k == 30 :\n",
+        "          if j == 1 : \n",
+        "            if k > 28: \n",
         "              out = True\n",
         "              break\n",
         "          if j+1 in small:\n",
-        "            if k == 29 or k == 30:\n",
+        "            if k > 29: \n",
         "              out = True\n",
         "              break\n",
         "          month_tok = j\n",
@@ -1425,7 +1510,7 @@
         "        break\n",
         "    if out == True:\n",
         "        break\n",
-        "    if day_tok != 999 & month_tok != 999:\n",
+        "    if day_tok != 999 and month_tok != 999:\n",
         "      break\n",
         "\n",
         "  try:\n",
@@ -1433,7 +1518,8 @@
         "    print(\"day:\",day_token[day_tok])\n",
         "  except:\n",
         "    #print(\"error\")\n",
-        "    # print(\"month_tok:\",month_tok)\n",
+        "    #print(\"month_tok:\",month_tok)\n",
+        "    #print(\"day:\",day_tok)\n",
         "    md_token = True"
       ],
       "metadata": {
@@ -1452,14 +1538,26 @@
         "  md_spoken = False\n",
         "\n",
         "  spoken = 999\n",
+        "  \n",
+        "  count = 0\n",
         "\n",
-        "  for i in range(0,len(line)-3):\n",
+        "  for i in range(0,len(line)):\n",
         "    j = i+1\n",
         "    k = j+1\n",
         "    l = k+1\n",
-        "    line_1 = line[i] + line[j] + line[k] + line[l]\n",
-        "    line_2 = line[i] + line[j] + line[k]\n",
         "\n",
+        "    try:\n",
+        "      line_1 = line[i] + line[j] + line[k] + line[l]\n",
+        "      line_2 = line[i] + line[j] + line[k]\n",
+        "    except:\n",
+        "      line.append(\" \")\n",
+        "      count += 1\n",
+        "\n",
+        "      line_1 = line[i] + line[j] + line[k] + line[l]\n",
+        "      line_2 = line[i] + line[j] + line[k]\n",
+        "    \n",
+        "    if count == 4:\n",
+        "      break\n",
         "\n",
         "    if line_1 in spoken_1 :\n",
         "      for d in range(0,len(spoken_1)):\n",
@@ -1498,11 +1596,25 @@
         "\n",
         "  preiod = 999\n",
         "\n",
-        "  for i in range(0,len(line)-1):\n",
+        "  count = 0\n",
+        "\n",
+        "  for i in range(0,len(line)):\n",
+        "\n",
+        "\n",
         "    j = i+1\n",
         "    k = j+1\n",
-        "    line_1 = line[i] + line[j] \n",
         "\n",
+        "    try:\n",
+        "      line_1 = line[i] + line[j] \n",
+        "    except:\n",
+        "      line.append(\" \")\n",
+        "      count += 1\n",
+        "\n",
+        "      line_1 = line[i] + line[j] \n",
+        "\n",
+        "\n",
+        "    if count == 2:\n",
+        "      break\n",
         "\n",
         "    if line_1 in preiod_1 :\n",
         "      for d in range(0,len(preiod_1)):\n",
@@ -1530,13 +1642,15 @@
       "cell_type": "code",
       "source": [
         "def al(line):\n",
+        "  #print(len(line))\n",
         "  MomthDay_(line)  #4月3號\n",
         "  MonthDay_num(line) #4/3\n",
         "  MonthDay_token(line) #四月三號\n",
         "  MonthDay_spoken(line) #星期三\n",
         "  MonthDay_preiod(line) #早中晚\n",
         "  if md_spoken == True and md_token == True and md_num == True and md_ == True and md_preiod == True :\n",
-        "    print(\"日期錯誤\")\n"
+        "    print(\"日期錯誤\")\n",
+        "\n"
       ],
       "metadata": {
         "id": "PG-81NNVkI1V"
